swoleBackend/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swole
  labels:
    app.kubernetes.io/name: swole
    app.kubernetes.io/component: namespace
