swoleBackend/k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: swole
  labels:
    app.kubernetes.io/name: swole
    app.kubernetes.io/component: postgres
spec:
  selector:
    app.kubernetes.io/name: swole
    app.kubernetes.io/component: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
